--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,7 @@ dependencies = [
     "altair>=5.5.0",
     "pandas>=2.3.2",
     "streamlit>=1.49.1",
+    "matplotlib",
+    "wordcloud",
+    "boto3"
 ]
